<resources>
    <string name="app_name">कृषि सहयोग</string>
    <string name="app_name_hindi" translatable="false">कृषि सहयोग</string>
    <string name="app_name_english" translatable="false">Krishi Sahyog</string>
    <string name="terms_and_conditions">By authenticating i agree to the \n <b>Terms &amp; Conditions </b> </string>
    <string name="google_authenticate_button_text">Authenticate to continue</string>
    <string name="who_are_you">Who are you?</string>
    <string name="farmer">I am a farmer</string>
    <string name="buyer">I am a buyer</string>
    <string name="fill_your_details">Fill your details</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="upload_your_field_s_latest_soil_report">Latest soil report</string>
    <string name="submit">Submit</string>
    <string name="your_land_size_in_acres">Your land size in acres</string>
    <string name="upload_report">Upload</string>
    <string name="hello">Hello,</string>
    <string name="deals_closed">Closed Deals</string>
    <string name="active_deals">Active Deals</string>
    <string name="current_listings">Current crop listings</string>
    <string name="price">Price:</string>
    <string name="create_a_new_crop_listing">Create a new crop listing</string>
    <string name="crop_name">Crop name</string>
    <string name="offer_price">Offer price</string>
    <string name="images">Images of crop</string>
    <string name="add_crop_to_listing">Add crop to listing</string>
    <string name="quintal">quintal</string>
    <string name="personal_id_card">Personal ID Card</string>
    <string name="set_app_language">Set App Language</string>
    <string name="app_language">App Language</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="active_bids">Active Bids</string>
    <string name="closed_bids">Closed Bids</string>
    <string name="all_listings">All Listings</string>
</resources>