<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    tools:context=".app.onboarding.LanguageSelectionFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/languageIcon"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_language" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/noto_devnagri"
        android:text="@string/app_language"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/languageIcon"
        app:layout_constraintStart_toEndOf="@+id/languageIcon"
        app:layout_constraintTop_toTopOf="@+id/languageIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/languageSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_devnagri"
        android:lineSpacingExtra="2dp"
        android:text="@string/select_your_preferred_language"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/languageIcon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/languageSub"
        app:spanCount="2"
        tools:itemCount="2"
        tools:listitem="@layout/item_app_language" />

    <Button
        android:id="@+id/setAppLanguageButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/theme_orange"
        android:fontFamily="@font/noto_devnagri"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/set_app_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>