<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".farmer.crops.CreateNewCropListing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:paddingTop="22dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/createNewListingTv"
            app:layout_constraintEnd_toStartOf="@id/createNewListingTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/createNewListingTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createNewListingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_devnagri"
            android:padding="10dp"
            android:text="@string/create_a_new_crop_listing"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/suggestedPriceCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topCv">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/suggestedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light_yellow"
            android:fontFamily="@font/noto_devnagri"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="Suggested Price: ₹12,000/quintal"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suggestedPriceCv">

        <LinearLayout
            android:id="@+id/outerLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cropName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/crop_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/inputCropName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    tools:text="Rice - Whole" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/offerPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/offer_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:prefixText="₹  "
                app:prefixTextColor="@color/theme_green">

                <EditText
                    android:id="@+id/inputOfferPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    tools:text="2100" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cropImages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/images"
                    app:layout_constraintEnd_toStartOf="@id/uploadReport"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/inputCropImages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        tools:text="IMG1311.png" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/uploadReport"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/theme_orange"
                    android:fontFamily="@font/noto_devnagri"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/upload_report"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/cropImages"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cropImages"
                    app:layout_constraintTop_toTopOf="@id/cropImages" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/theme_orange"
            android:fontFamily="@font/noto_devnagri"
            android:text="@string/add_crop_to_listing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outerLl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/theme_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>